fix: NASA-00 fix z-index titles on the about page

--- a/src/pages/aboutPage/_about.module.scss
+++ b/src/pages/aboutPage/_about.module.scss
@@ -61,6 +61,10 @@
       font-size: 1rem;
     }
 
+    @media (width <= 850px) {
+      z-index: 0;
+    }
+
     @media (width <= 550px) {
       font-size: 0.8rem;
     }
